--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -14,6 +14,11 @@ Conditions:
 
 Resources:
 
+  Fn::Transform:
+    Name: 'AWS::Include'
+    Parameters:
+      Location: 's3://MyAmazonS3BucketName/MyFileName.yaml'
+
   OrganizationsLookup:
     Type: AWS::CloudFormation::CustomResource
     Properties:
