--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -10,7 +10,7 @@ batch:
             - eu-west-1
             - eu-central-1
           UPDATE_FROM_LATEST_RELEASE:
-            - true
+            #- true
             - false
 
 phases:
