--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -20,7 +20,7 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: python3.7
-      Timeout: 120 # give it more time since it installs awsapilib
+      Timeout: 900 # give it more time since it installs awsapilib and tries to deploy control tower with retries
       Role: !GetAtt SetupControlTowerCustomResourceRole.Arn # provide explicit role to avoid circular dependency with AwsApiLibRole
       Policies:
         - Version: 2012-10-17
@@ -79,7 +79,7 @@ Resources:
             tower = ControlTower(os.environ['AWSAPILIB_CONTROL_TOWER_ROLE_ARN'])
 
             if RequestType == CREATE:
-                tower.deploy(logging_account_email=os.environ['LOG_ARCHIVE_AWS_ACCOUNT_EMAIL'], security_account_email=os.environ['AUDIT_AWS_ACCOUNT_EMAIL'])
+                tower.deploy(logging_account_email=os.environ['LOG_ARCHIVE_AWS_ACCOUNT_EMAIL'], security_account_email=os.environ['AUDIT_AWS_ACCOUNT_EMAIL'], retries=50, wait=5)
 
             cfnresponse.send(event, context, cfnresponse.SUCCESS, data, id)
 
