--- a/templates/feature.yaml
+++ b/templates/feature.yaml
@@ -137,7 +137,7 @@ Resources:
               Handler: script_handler
               InputPayload:
                 signal_url: !Ref FeatureReadyHandle
-              Script: >
+              Script: |
                 import json
                 import urllib3
                 import uuid
