--- a/templates/feature.yaml
+++ b/templates/feature.yaml
@@ -1,11 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
-Description: Sets up backups. (qs-1s3rsr7la)
+Description: Sets up a superwerker feature. Make installatations more reliable by retrying failed CloudFormation stack creations and updates.
 
 Parameters:
   FeatureName:
     Type: String
-    Default: backup
   TemplateURL:
     Type: String
 
