--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -94,7 +94,7 @@ Resources:
               Service: lambda.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
   SetupControlTowerCustomResourceRolePolicy:
     Type: AWS::IAM::Policy
@@ -120,7 +120,7 @@ Resources:
               AWS: !GetAtt SetupControlTowerCustomResourceRole.Arn
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess
+        - arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess
 
   ControlTowerReadyHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
